--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
   <header>
     <h1>My Personal Info Page</h1>
   </header>
-
-  <img src="https://via.placeholder.com/150" alt="My Photo">
-
-  <p>Hello! My name is <b>Your Name</b>.  
+  <img src="hand.jpg" alt="">
+  <p>Hello! My name is <b>Vaidehi</b>.  
   I am learning web development and this is my first webpage project!</p>
 
   <h2>My Hobbies</h2>
   <ul>
     <li>Coding</li>
+    <li>Sketching</li>
     <li>Reading</li>
-    <li>Playing Games</li>
-    <li>Music</li>
+    <li> listning Music</li>
   </ul>
 
   <a href="https://www.wikipedia.org" target="_blank">Visit My Favorite Website</a>
